fixed issue with job-source spacing

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -216,6 +216,7 @@ ol.job-listings li {
 
 .job-listing .job-title-wrapper {
   float: left;
+  width:360px;
 }
 
 .job-listing .flag-item, .job-listing .unflag-item {
